# zettpadder

./: .gitignore  Cargo.toml  README.md  compatibility.md
examples/: 2d.zett  ace-attorney-chronicles.zett  ace-attorney-trilogy.zett  across-the-obelisk.zett  addmouse.zett  aliens-fireteam-elite.zett  aliens-vs-predator-2000.zett  aliens-vs-predator-2010.zett  alpha-protocol.zett  amnesia-rebirth.zett  amnesia-the-bunker.zett  apex-legends.zett  assault-android-cactus.zett  beyond-all-reason-grid.zett  beyond-all-reason.zett  bioshock.zett  black-mesa.zett  blender.zett  borderlands-3.zett  brigand-oaxaca.zett  children-of-morta.toml  children-of-morta.zett  command-and-conquer-remastered.zett  cortex-command.zett  cruelty-squad.zett  day-of-the-tentacle.zett  deep-rock-galactic-minimal.zett  deep-rock-galactic.zett  deeprock.toml  deeprock.zett  dont-starve-together.zett  dungeon-siege-3.zett  earth-defense-force-5.zett  earth-defense-force-insect-armageddon.zett  earth-defense-force-world-brothers.zett  edf-iron-rain.zett  edf-world-brothers.zett  edf5.zett  elder-scrolls-2-daggerfall.zett  elder-scrolls-3-morrowind.zett  (+105 more)
examples/definitions/: flydigi-apex-2.toml
examples/mappings/: swat-4.toml
examples/skeletons/: flypad.zett  rts.zett
src/: cli.rs  controller_poller.rs  coords.rs  emitter.rs  function.rs  macros.rs  main.rs  mapping.rs  mouser.rs  overlay.rs  ring.rs  smoothing.rs  state.rs  turbo.rs  zettpadder.rs
src/parsers/: inputs.rs  mod.rs  outputs.rs  toml.rs  zett.rs
