[package]
name = "zettpadder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
rdev = "0.4.6"
gilrs = { version = "0.8.2", features = ["serde-serialize"] }
ctrlc = "3.2.1"
toml = "0.5.8"
serde = "1.0.116"
serde_json = "1.0.59"
