[package]
name = "zettpadder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.2"
async-ctrlc = "1.2.0"
toml = "0.5.8"
pasts = "0.8"
futures = "0.3.4"
[dependencies.stick]
version = "0.12.3"
path = "../stick/stick"
# git = "https://github.com/zeddidragon/stick.git"
# branch="feature_flydigi-apex-2-mapping"
[dependencies.rdev]
version = "0.5"
# path = "../rdev"
git = "https://github.com/zeddidragon/rdev.git"
branch="feature-relative-mouse"
