[package]
name = "zettpadder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
pasts = "0.8"
rustyline = "9.1"
dirs = "4.0.0"

[dependencies.stick]
version = "0.12"
# path = "../stick/stick"
git = "https://github.com/zeddidragon/stick.git"
branch="feature-public-to-id"
[dependencies.rdev]
version = "0.5"
# path = "../rdev"
git = "https://github.com/zeddidragon/rdev.git"
branch="feature-relative-mouse"
